# ros_yolo

./: CMakeLists.txt  README.md  package.xml
msg/: prediction.msg
src/: rpi_yolo.py  yolo.py
